# henry_flutter_plugin

./: .metadata  .pubignore  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/henry_flutter_plugin_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: henry_flutter_plugin.podspec
ios/Classes/: henry_flutter_plugin.c
lib/: henry_flutter_plugin.dart  henry_flutter_plugin_bindings_generated.dart
src/: CMakeLists.txt  henry_flutter_plugin.c
